setUserAttribute, addUserToGroup, getUsers, userExists methods added
